<resources>
    <string name="facebook_app_id">724312941692485</string>
    <string name="fb_login_protocol_scheme">fb724312941692485</string>


    <string name="app_name">Mpatlisa Ntlo</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="main_logo">main_logo</string>
    <string name="Create_Account"><b>Do not Have an Account <u>Sign up</u></b> </string>
    <string name="Join_us">Join our Batswana in search of good housing</string>
    <string name="Have_an_account">Already have An Account?<u>Login</u></string>
    <string name="login"><u>Login</u></string>
    <string name="register_image">Register_image</string>
    <string name="register_logo">Register_logo</string>
    <string name="user_name">User Name</string>
    <string name="cell_number">Cell Number</string>
    <string name="password">Password</string>
    <string name="password2"><b>Password</b></string>
    <string name="email2"><b>Email</b></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="landlord">Landlord</string>
    <string name="tenant">Tenant</string>
    <string name="please_wait">Please wait......</string>
    <string name="welcome_to_mpatlisa_ntlo"><b>Welcome to Mpatlisa Ntlo</b></string>
    <string name="submit"><b>Login</b></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="_267">+267</string>
    <string name="sign_out">Sign out</string>

    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="home1">home</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="location">Location</string>
    <string name="night_mode">Night Mode</string>
    <string name="menu">Menu</string>
    <string name="users">Users</string>
    <string name="chat">Chat</string>
    <string name="search2">Search....</string>
    <string name="chat_list">Chat List</string>
    <string name="online">Online</string>
    <string name="start_typing">Start Typing</string>
    <string name="other_user_message">Other User Message</string>
    <string name="time_display">04/14/2020 4:49PM</string>
    <string name="delivered">delivered</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="upload">Upload</string>
    <string name="_33min">33 min</string>
    <string name="title">Title</string>
    <string name="description_post">The description of the post</string>
    <string name="like">LIKE</string>
    <string name="comment">COMMENT</string>
    <string name="share">SHARE</string>
    <string name="likes">1.2 Likes</string>
    <string name="enter_comment">Enter Comment...</string>
    <string name="number_comments">3 Comments</string>
    <string name="actual_comment">This is actual comment</string>
    <string name="date">12/01/2020</string>
    <string name="comments">Comments</string>
    <string name="uploads">Upload Posts</string>
    <string name="block_3">Block 3</string>
    <string name="bwp_10_000">BWP 10 000</string>
    <string name="about_this_house">About this house</string>
    <string name="region">region</string>
    <string name="price">Price</string>
    <string name="_7k">7K</string>
    <string name="zero">0</string>
    <string name="back">Back</string>
    <string name="icon">icon</string>
    <string name="pagename">PageName</string>
    <string name="post_details">Post Details</string>
    <string name="upload_post">Upload Post</string>
    <string name="below_this_prices">Budget Price: P</string>
    <string name="budget_price"> eg 1000</string>
    <string name="eg_block_7">eg Block 7</string>
    <string name="your_preferred_are">Your Preferred Are:</string>
    <string name="eg_francistown">eg Francistown</string>
    <string name="your_preferred_location">Your Preferred Location:</string>
    <string name="submit2">Submit</string>
    <string name="property_for">Property For</string>
    <string name="sign_in"><b>Sign in</b></string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="give_a_better_offer">Give a better offer?</string>


</resources>
