<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    app:contentPadding="2dp"
    app:cardBackgroundColor="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_user_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTV"
            android:layout_toRightOf="@+id/avatarIv"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commentTv"
            android:layout_below="@+id/nameTV"
            android:layout_toRightOf="@+id/avatarIv"
            android:text="@string/actual_comment"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeTV"
            android:layout_below="@+id/commentTv"
            android:layout_toEndOf="@+id/avatarIv"
            android:text="@string/date"
            android:textColor="@android:color/black"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>