<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    app:contentPadding="2dp"
    app:cardBackgroundColor="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarIv22"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_user_icon"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTV22"
            android:layout_toRightOf="@+id/avatarIv"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeTV22"
            android:layout_below="@+id/commentTv"
            android:layout_toEndOf="@+id/avatarIv"
            android:text="@string/date"
            android:textColor="@android:color/black"/>
        </LinearLayout>
        <TextView
            android:layout_marginStart="25dp"
            android:id="@+id/uBid22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round2"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/bwp_10_000"/>


    </LinearLayout>


</androidx.cardview.widget.CardView>